syntax = "proto3";

option csharp_namespace = "Discount.Grpc";

package discount;

service DiscountProtoService {
  rpc GetDiscount (GetDiscountRequest) returns (CouponEntity);
  rpc CreateDiscount (CreateDiscountRequest) returns (CouponEntity);
  rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscount {
  string productName = 1;
}

message CouponEntity {
  int32 id = 1;
  string productName = 2;
  double  amount = 3;
}

message CreateDiscountRequest {
  CouponEntity coupon = 1;
}

message GetDiscountRequest {
  string productName = 1;
}
message DeleteDiscountRequest {
  string productName = 1;
}

message DeleteDiscountResponse {
  bool isSuccess = 1;
}

